[package]
name = "api_server"
version = "0.1.0"
authors = ["badconfig <array.clean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
r2d2 = "0.8"
dotenv = "0.15.0"
serde = "1.0.124"
env_logger = "0.8.3"
database = { path = "../database" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
