[package]
name = "cola_extractor"
version = "0.1.0"
authors = ["GooGrand <55867268+GooGrand@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "cola"
path = "src/lib.rs"

[[bin]]
name = "cola_extractor"
path = "src/evm_extractor/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.15.0"
tokio = {version = "0.2", features = ["macros","rt-threaded", "full"]}
chrono = "0.4.19"
hex = "0.4.3"
serde = "1.0.126"
dotenv = "0.15.0"
tokio-stream = "0.1"
database = { path = "../database" }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_yaml = "0.8.13"
base64 = "0.13.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
