[package]
name = "database"
version = "0.1.0"
authors = ["badconfig <array.clean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres","uuid","uuidv07","r2d2","chrono"] }
tokio = { version = "1.2.0", features = ["full", "tracing"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
r2d2 = "0.8.9"
chrono = "0.4.19"
