[package]
name = "database"
version = "0.1.0"
authors = ["badconfig <array.clean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres","numeric","uuid","uuidv07","r2d2","chrono"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_yaml = "0.8.13"
r2d2 = "0.8.9"
chrono = "0.4.19"
ethcontract = "0.11.0"
base64 = "0.13.0"
bigdecimal = "0.1.0"
serde = "1.0.130"
reqwest = { version = "0.11.4", features = ["json"]}
serde_json = { version = "1.0.64"}
hex = "0.4.3"

