[package]
name = "token_transfer_scanner"
version = "0.1.0"
authors = ["badconfig <array.clean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.0"
poller_core = { path = "../poller_core" }
evm_event_scanner = { path="../evm_event_scanner" }
async-trait = "0.1.42"
reqwest = "0.11.1"
tokio = { version = "1.2.0", features = ["full", "tracing"] }
serde_json = "1.0"
multiqueue = "0.3.2"
hex = "0.3.1"
chrono = "0.4.19"
bigint = "4.2.0"
base64 = "0.3.1"
dotenv = "0.15.0"
